--- a/industryinc/tacooler.html
+++ b/industryinc/tacooler.html
@@ -130,7 +130,7 @@
         <nav class="site-nav-menu">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="about.html">About us</a></li>
+            <li><a href="about.html">About us</a></li>
             <li>
               <a href="solutions.html">Products</a>
             </li>
@@ -158,18 +158,53 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-7">
-            <h2>Our Products</h2>
+            <h2>Turbo After Cooler</h2>
             <!-- <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
              orci purus, sodales in est quis, blandit sollicitudin est. Nam
              ornare ipsum ac accumsan auctor.
            </p> -->
-            <a href="#expertise" class="site-btn">Know More</a>
+            <!-- <a href="#expertise" class="site-btn">Know More</a> -->
           </div>
         </div>
       </div>
     </section>
     <!-- Page top section end  -->
+
+    <section class="about-section spad">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <img src="img/14.jpg" alt="" />
+          </div>
+          <div class="col-lg-6">
+            <div class="about-text text-center">
+              <h2 style="font-weight: bolder;">Turbo After Cooler</h2>
+              <p
+                style="
+                  font-size: 1.5rem;
+                  font-family: Cambria, Cochin, Georgia, Times,
+                    'Times New Roman', serif;
+                "
+              >
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel
+                neque deserunt cupiditate fugiat possimus eligendi est repellat
+                suscipit praesentium pariatur.
+              </p>
+              <div class="about-sign">
+                <!-- <div class="sign">
+                  <img src="img/sign.png" alt="" />
+                </div> -->
+                <!-- <div class="sign-info">
+                  <h5>Mr. Rai Ashwani Kumar</h5>
+                  <span>Managing Director</span>
+                </div> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Footer section -->
     <div class="footer-buttom">
@@ -178,7 +213,7 @@
           <div class="col-lg-12 order-1 order-lg-2 p-0">
             <ul class="footer-menu text-center">
               <li><a href="index.html">Home</a></li>
-              <li class="active"><a href="about.html">About us</a></li>
+              <li><a href="about.html">About us</a></li>
               <li><a href="solutions.html">Products</a></li>
               <li><a href="blog.html">Facilities</a></li>
               <li><a href="contact.html">Contact</a></li>
